@@ -1,3 +1,9 @@
+Fri Jun  9 05:39:06 2000  Lars Wirzenius  <liw@wapit.com>
+
+	* gw/wsp-session.c, gw/wsp_machine-decl.h, gw/wsp_state-decl.h:
+	Removed `unused' field from WSPMachine, using state == NULL_STATE
+	instead.
+
 Fri Jun  9 05:32:38 2000  Lars Wirzenius  <liw@wapit.com>
 
 	* gw/wap-events-def.h, gw/wtp.c, gw/wsp_state-decl.h: Removed
